feat: impl laravel log endpoints with rolebased
